fix modal display on mobile

--- a/scss/user.scss
+++ b/scss/user.scss
@@ -228,3 +228,9 @@ mark {
     width: 60%
   }
 }
+
+.modal-dialog-centered::before {
+    display: block !important;
+    height: calc(100vh - 1rem) !important;
+    content: "";
+}
